# WriteDo

./: .gitignore  package-lock.json  package.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs  plan_generator.rs
src-tauri/src/commands/: import_cmd.rs  mod.rs  plan_cmd.rs  task_cmd.rs  writing_cmd.rs
src-tauri/src/db/: init.rs  mod.rs  plan_dao.rs  task_dao.rs  writing_dao.rs
src-tauri/src/models/: mod.rs  plan.rs  task.rs  writing.rs
src/api/: index.ts
src/assets/: styles.css
src/components/: SettingsPanel.vue
src/components/editor/: RitualTransition.vue  WritingEditor.vue
src/components/icons/: AppIcon.vue
src/components/plans/: PlanDetail.vue  PlanPanel.vue
src/components/stats/: StatsPanel.vue
src/components/tasks/: TaskPanel.vue
src/types/: index.ts
src/utils/: env.ts  notify.ts
